@@ -3,6 +3,8 @@ ver 0.23.8 (not yet released)
   - curl: fix crash if web server does not understand WebDAV
 * output
   - pipewire: fix crash with PipeWire 0.3.53
+* mixer
+  - better error messages
 * support libfmt 9
 
 ver 0.23.7 (2022/05/09)
